<?xml version="1.0" encoding="utf-8"?>
<menu
    xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/main_hub_menu_map"
        android:title="@string/nav_map"
        android:icon="@drawable/ic_menu_map"/>
    <item
        android:id="@+id/main_hub_menu_list"
        android:title="@string/nav_list"
        android:icon="@drawable/ic_menu_view_list"/>
    <item
        android:id="@+id/main_hub_menu_workmates"
        android:title="@string/nav_workmates"
        android:icon="@drawable/ic_menu_workmates"/>

</menu>